Focus visible fix (#192)
* Limit the cursor to stay only within data values in braille controller

* Fix focus outline

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -191,7 +191,7 @@ select:focus,
 textarea:focus,
 span:focus,
 .layer:focus {
-  outline: 2px solid #646e8c;
+  outline: 4px solid #646e8c;
   outline-offset: 5px;
 }
 
